# prueba_tecnica_signqia

./: .gitignore  LICENSE  test.py
backend/: Dockerfile  docker-compose.yml  entrypoing.sh  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_marca_table.py  add_timestamps.py  create_marca_table.py
backend/api/: deps.py
backend/api/v1/: routers.py
backend/api/v1/endpoints/: detalles.py  marcas.py
backend/bd/: index.py  session.py
backend/core/: config.py
backend/models/: index.py
backend/repositories/: marca_repository.py  metrics_repository.py
backend/schemas/: Marca.py
backend/scripts/: setup_venv.ps1  setup_venv.sh
backend/services/: index.py  metrics_service.py
backend/utils/: types.py
docker/: entrypoing.sh
frontend/: package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashborad)/: page.tsx
frontend/src/app/marcas/: page.tsx
frontend/src/app/not-found/: page.tsx
frontend/src/app/pages/: Dashboard.tsx  MarcasLista.tsx  NotFound.tsx  NuevoRegistro.tsx
frontend/src/app/types/: marca.ts
frontend/src/components/: Providers.tsx
frontend/src/components/hooks/: marcas.ts  use-mobile.tsx  use-toast.ts
frontend/src/components/layout/: AppLayout.tsx  AppSidebar.tsx
frontend/src/components/ui/: sidebar.tsx  stepper.tsx
frontend/src/lib/: api.ts  env.ts  marcas.api.ts  marcas.key.ts  utils.ts
frontend/src/types/: marca-api.ts  marca.ts
(+9 files in other folders)
